# litsdf

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  kittest.toml
assets/: shaders
content/: _app.md  add_shape.md  properties.md  shapes.md  yaml_editor.md
crates/litsdf_cli/: Cargo.toml
crates/litsdf_cli/src/: main.rs
crates/litsdf_cli/src/commands/: bone.rs  mod.rs  modifier.rs  scene.rs  shape.rs
crates/litsdf_cli/tests/: cli_workflows.rs
crates/litsdf_core/: Cargo.toml
crates/litsdf_core/src/: ik.rs  lib.rs  models.rs  persistence.rs  physics.rs  scene.rs  sdf.rs
crates/litsdf_editor/: Cargo.toml
crates/litsdf_editor/content/: file_browser.md  properties.md  scene_settings.md
crates/litsdf_editor/src/: lib.rs  project.rs  testing.rs  undo.rs
crates/litsdf_editor/src/demos/: abstract_sculpture.rs  boolean_sampler.rs  damping_lab.rs  hanging_chain.rs  ik_walker.rs  lemmings.rs  mod.rs  modifier_parade.rs  mushroom_garden.rs  pendulum.rs  primitive_gallery.rs  robot_friend.rs  speed_glow.rs  walker.rs  wave_force.rs
crates/litsdf_editor/src/nodes/: eval.rs  expression.rs  mod.rs  presets.rs  types.rs  viewer.rs
crates/litsdf_editor/src/ui/: handlers.rs  helpers.rs  mod.rs  modifier_stack.rs  panel_tests.rs  populate.rs  shortcuts.rs  sync.rs  tree.rs
crates/litsdf_render/: Cargo.toml
crates/litsdf_render/assets/shaders/: sdf_postamble.wgsl  sdf_preamble.wgsl  sdf_raymarch.wgsl
crates/litsdf_render/src/: avian_physics.rs  camera.rs  codegen.rs  gizmos.rs  lib.rs  picking.rs  scene_sync.rs  shader.rs
knowledge/: bevy-patterns.md  bone-hierarchy.md  cli-design.md  demo-scenes.md  glossary.md  litui-feature-request.md  litui-integration.md  node-architecture.md  node-editor-conventions.md  node-editor-libraries.md  node-property-mapping.md  pbr-lighting.md  picking-and-compass.md  rust-conventions.md  sdf-math-glossary.md  sdf-rendering.md  shader-codegen.md  shape-modifiers.md  testing.md  ui-architecture.md  ui-conventions.md  ui-phase-plan.md
knowledge/api/: API.md
scenes/: .gitkeep  selfie_girl.yaml
scripts/: generate-api-docs.py
src/: main.rs
tests/: screenshot_test.sh
