[package]
name = "litsdf_render"
version = "0.1.0"
edition = "2024"

[dependencies]
litsdf_core = { workspace = true }
avian3d = { workspace = true }
bevy = { workspace = true }
bevy_egui = { workspace = true }
egui = { workspace = true }

[dev-dependencies]
naga = { version = "29.0.1", features = ["wgsl-in"] }
